syntax = "proto3";

package AuctionSystem;

option go_package = "grpc/proto";

message MakeBid {
    int64 clientId = 1;
    int64 bid = 2;
}

message AskForHighestBid {
    int64 clientId = 1;
}

message HighestBid {
    string highestBid = 1;
}

message Ack {
    string message = 1;
}

service AuctionSystem {
    rpc AskForBid(AskForHighestBid) returns (HighestBid);
    rpc MakeABid(MakeBid) returns (Ack);
}